# cheungfun

./: .gitignore  CLAUDE.md  Cargo.toml  EXAMPLES_ARCHITECTURE.md  EXAMPLES_ARCHITECTURE_DEV.md  README.md  performance_test.rs  simple_performance_test.rs
cheungfun/: Cargo.toml
cheungfun-agents/: ARCHITECTURE_REFACTOR.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  NEXT_STEPS.md  README.md  REFACTORING_SUMMARY.md
cheungfun-agents/docs/: api.md  getting_started.md  llm_integration.md
cheungfun-agents/examples/: README.md  basic_agent.rs  http_mcp_client.rs  http_mcp_server.rs  mcp_integration.rs  memory_chat_example.rs  react_agent_example.rs  react_with_llm.rs  simple_agent_example.rs  simple_mcp_test.rs  workflow_demo.rs  workflow_orchestration.rs
cheungfun-agents/src/: error.rs  lib.rs  task.rs  types.rs  workflow.rs
cheungfun-core/: Cargo.toml  README.md
cheungfun-core/examples/: multilingual_config.json
cheungfun-core/src/: deduplication.rs  error.rs  lib.rs  prelude.rs  relationships.rs
cheungfun-core/tests/: config_integration_test.rs  multilingual_config_test.rs  multilingual_integration_test.rs
cheungfun-indexing/: Cargo.toml  README.md
cheungfun-indexing/examples/: async_first_verification.rs  basic_indexing.rs  basic_integration_demo.rs  code_parsing.rs  new_parsers_demo.rs  parser_showcase.rs  parser_showcase.rs.disabled  runtime_safety_demo.rs  text_splitters.rs  text_splitters.rs.disabled
cheungfun-indexing/src/: error.rs  lib.rs  pipeline.rs  utils.rs
cheungfun-indexing/tests/: disabled_tests.rs  ingestion_cache_tests.rs.disabled  integration_tests.rs  keyword_extractor_tests.rs.disabled  llm_extractor_tests.rs.disabled  summary_extractor_tests.rs.disabled  title_extractor_tests.rs.disabled
cheungfun-integrations/: Cargo.toml  README.md
cheungfun-integrations/docs/: api_embedder.md
cheungfun-integrations/examples/: api_embedder_example.rs  feature_demo.rs  simple_test.rs  vector_store_performance.rs
cheungfun-integrations/src/: lib.rs
cheungfun-integrations/tests/: candle_embedder_integration.rs  fastembed_integration.rs  performance_integration_test.rs  storage_integration_test.rs
cheungfun-multimodal/: Cargo.toml  README.md
cheungfun-multimodal/examples/: audio_processing.rs  image_processing.rs
cheungfun-multimodal/src/: error.rs  lib.rs
cheungfun-query/: Cargo.toml  README.md
cheungfun-query/examples/: basic_query.rs  hierarchical_retrieval.rs  query_pipeline.rs
cheungfun-query/src/: engine.rs  factory.rs  generator.rs  hierarchical.rs  lib.rs  pipeline.rs  retriever.rs  utils.rs
cheungfun-query/tests/: hierarchical_retrieval_test.rs  memory_integration_test.rs  property_graph_index_llm_tests.rs  siumai_integration.rs  unit_tests.rs
cheungfun/src/: lib.rs
examples/: Cargo.toml  EXAMPLES_GUIDE.md  MARKDOWN_RAG_EXAMPLE.md  MARKDOWN_RAG_SUMMARY.md  QUICK_START.md  RAG_DEVELOPMENT_PROGRESS.md  README.md  README_unity_csharp_rag.md  advanced_rag_example.rs  advanced_retrieval_demo.rs  ast_code_splitter_test.rs  cache_monitoring_demo.rs  cache_performance_optimization.rs  caching_demo.rs  candle_embedder_demo.rs  candle_embedder_performance.rs  complete_rag_demo.rs  comprehensive_agent_example.rs  comprehensive_performance_test.rs  debug_code_chunking.rs  embedding_config_example.md  end_to_end_indexing.rs  end_to_end_retrieval_demo.rs  hybrid_performance_demo.rs  ingestion_cache_demo.rs  ingestion_pipeline_deduplication.rs  keyword_extractor_demo.rs  kvstore_demo.rs  list_examples.rs  llm_graph_rag_demo.rs  markdown_parser_demo.rs  markdown_rag_example.rs  mcp_integration_example.rs  node_parser_example.rs  output.txt  performance_benchmark.rs  pipeline_architecture_demo.rs  pipeline_cache_integration.rs  pipeline_caching_demo.rs  rag_agent_example.rs  (+20 more)
examples/01_foundational/: README.md  chunk_size_optimization.rs  csv_rag.rs  proposition_chunking.rs  reliable_rag.rs  simple_rag.rs
examples/01_getting_started/: README.md  basic_indexing.rs  basic_querying.rs  basic_usage.rs  hello_world.rs
examples/02_query_enhancement/: README.md  hyde.rs  hype.rs  query_transformations.rs
examples/03_advanced_features/: advanced_retrieval_demo.rs
examples/03_context_enrichment/: context_window_enhancement.rs  contextual_chunk_headers.rs  contextual_compression.rs  document_augmentation.rs  relevant_segment_extraction.rs  semantic_chunking.rs
examples/03_retrieval_optimization/: README.md  corrective_rag.rs  ensemble_retrieval.rs  fusion_retrieval.rs  hierarchical_indices.rs  intelligent_reranking.rs  multi_faceted_filtering.rs  self_rag.rs
examples/04_advanced_retrieval/: contextual_compression.rs  ensemble_retrieval.rs  multi_faceted_filtering.rs  multi_vector_retrieval.rs  self_querying.rs
examples/04_integrations/: mcp_integration_example.rs
examples/05_performance/: PERFORMANCE_TESTING.md  feature_comparison.rs  performance_optimization_demo.rs
examples/06_production/: complete_rag_demo.rs  end_to_end_indexing.rs  end_to_end_query.rs  end_to_end_retrieval_demo.rs
examples/07_gpu_acceleration/: cuda_embedder_demo.rs  metal_embedder_demo.rs
examples/08_rag_agent/: main.rs  simple_main.rs
examples/Rag_Techniques/: 01_simple_rag.rs  02_csv_rag.rs  03_reliable_rag.rs  04_chunk_size_optimization.rs  05_proposition_chunking.rs  06_query_transformations.rs  07_hyde.rs  08_hype.rs  09_contextual_chunk_headers.rs  10_relevant_segment_extraction.rs  11_context_window_enhancement.rs  12_semantic_chunking.rs  13_contextual_compression.rs  14_document_augmentation.rs  15_fusion_retrieval.rs  16_intelligent_reranking.rs  17_multi_faceted_filtering.rs  18_hierarchical_indices.rs  19_ensemble_retrieval.rs  20_retrieval_feedback_loop.rs  21_adaptive_retrieval.rs  22_iterative_retrieval.rs  23_self_rag.rs  24_corrective_rag.rs  25_performance_benchmark.rs  26_llamaindex_style_postprocessors.rs  27_query_fusion_and_bm25.rs  28_summary_and_keyword_indices.rs  README.md
examples/UnityProject/: .gitignore
examples/config/: database.json  embedding.json  memory.json
examples/docs/: rust_basics.md  (+2 more)
tools/: Cargo.toml  README.md
(+333 files in other folders)
