[package]
name = "cheungfun-agents"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
description = "Agent framework and MCP integration for Cheungfun"
categories.workspace = true

[dependencies]
cheungfun-core = { path = "../cheungfun-core" }
cheungfun-query = { path = "../cheungfun-query" }

# Core async and error handling
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }



# HTTP client for tools
reqwest = { version = "0.11", features = ["json"] }

# Regular expressions for text parsing
regex = "1.0"

# MCP integration
rmcp = { workspace = true, features = ["client"] }
schemars = { workspace = true }

# Siumai for LLM integration
siumai = { workspace = true }

# Web server for MCP HTTP transport
axum = { workspace = true }

# Time handling
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
test-case = { workspace = true }
tempfile.workspace = true
tracing-subscriber = { workspace = true }
clap = { version = "4.4", features = ["derive"] }

[features]
default = []
