[package]
name = "cheungfun-agents"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
description = "Agent framework and MCP integration for Cheungfun"
categories.workspace = true

[dependencies]
cheungfun-core = { path = "../cheungfun-core" }
cheungfun-query = { path = "../cheungfun-query" }

# Core async and error handling
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }



# HTTP client for tools
reqwest = { version = "0.11", features = ["json"] }

# Regular expressions for text parsing
regex = "1.0"

# MCP integration
rmcp = { workspace = true, features = ["client"] }
schemars = { workspace = true }

# Siumai for LLM integration
siumai = { workspace = true }

# Web server for MCP HTTP transport
axum = { workspace = true }

# Time handling
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
test-case = { workspace = true }
tempfile.workspace = true
tracing-subscriber = { workspace = true }
clap = { version = "4.4", features = ["derive"] }

# Examples configuration
[[example]]
name = "simple_agent"
path = "examples/basic/simple_agent.rs"

[[example]]
name = "tool_usage"
path = "examples/basic/tool_usage.rs"

[[example]]
name = "comprehensive_agent"
path = "examples/advanced/comprehensive_agent.rs"

[[example]]
name = "custom_tools"
path = "examples/advanced/custom_tools.rs"

[[example]]
name = "memory_management"
path = "examples/advanced/memory_management.rs"

[[example]]
name = "openai_integration"
path = "examples/integration/openai_integration.rs"

[[example]]
name = "rag_integration"
path = "examples/integration/rag_integration.rs"

[[example]]
name = "mcp_client"
path = "examples/mcp/client.rs"

[[example]]
name = "mcp_server"
path = "examples/mcp/server.rs"

[[example]]
name = "mcp_integration"
path = "examples/mcp/integration.rs"

[[example]]
name = "mcp_simple_test"
path = "examples/mcp/simple_test.rs"

[features]
default = []
