[package]
name = "cheungfun-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
description = "Core traits, types, and interfaces for the Cheungfun RAG framework"
categories.workspace = true

[dependencies]
# Core async and error handling
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
bincode = { workspace = true }

# Streaming and futures
futures = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }

# Time handling
chrono = { workspace = true }

# Utilities
derive_builder = { workspace = true }
strum = { workspace = true }

# Language detection - using major languages only to avoid feature conflicts
lingua = { version = "1.7.2", default-features = false, features = ["english", "chinese", "japanese", "korean", "spanish", "french", "german", "russian", "portuguese", "italian", "arabic", "hindi"] }

# LLM integration
siumai = { workspace = true }

# Logging
tracing = { workspace = true }

# Caching
cached = { workspace = true }

# Performance optimization
rayon = { workspace = true }
num_cpus = { workspace = true }

# Configuration management
regex = "1.11"

# File watching (optional)
notify = { version = "6.1", optional = true }

# Database support (optional)
sqlx = { version = "0.8", optional = true, features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
mockall = { workspace = true }
test-case = { workspace = true }
pretty_assertions = { workspace = true }
temp-dir = { workspace = true }
tempfile = "3.8"
approx = "0.5"

[features]
default = []
hot-reload = ["notify"]
storage = ["sqlx"]
