[package]
name = "cheungfun-indexing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
description = "Document loading and indexing for the Cheungfun RAG framework"
categories.workspace = true

[dependencies]
cheungfun-core = { path = "../cheungfun-core" }

# Core async and error handling
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v5"] }

# Streaming and futures
futures = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }

# Text processing
text-splitter = { workspace = true }
tiktoken-rs = { workspace = true }
regex = { workspace = true }
unicode-segmentation = "1.12"
chrono = { workspace = true }

# Tree-sitter for AST parsing
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c-sharp = "0.23"

# Document processing
pdf-extract = { workspace = true }
docx-rs = { workspace = true }
csv = { workspace = true }
scraper = { workspace = true }

# File system and HTTP
reqwest = { workspace = true }
url = { workspace = true }

# File filtering and gitignore support
ignore = "0.4"
globset = "0.4"

# Logging
tracing = { workspace = true }
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
temp-dir = { workspace = true }
test-case = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
