[package]
name = "cheungfun-integrations"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
description = "External service integrations for Cheungfun"
categories.workspace = true

[dependencies]
cheungfun-core = { path = "../cheungfun-core" }

# Core async and error handling
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# Vector stores
qdrant-client = { workspace = true }

# Candle ML Framework (optional)
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }

# HuggingFace Integration (optional, for Candle)
hf-hub = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }

# FastEmbed (optional, default) - using latest version to fix ort compatibility
fastembed = { version = "4.0", optional = true }

# API embedders (optional)
siumai = { version = "0.4.0", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
sha2 = { version = "0.10", optional = true }

# High-performance SIMD vector operations
simsimd = { version = "6.4", optional = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
test-case = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
# Default feature: FastEmbed for best user experience
default = ["fastembed"]

# FastEmbed integration (recommended)
fastembed = ["dep:fastembed"]

# Candle integration (advanced users)
candle = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:hf-hub",
    "dep:tokenizers"
]

# API embedders integration (cloud services)
api = [
    "dep:siumai",
    "dep:reqwest",
    "dep:sha2"
]

# High-performance SIMD vector operations
simd = ["dep:simsimd"]

# Enable all embedding backends
all-embedders = ["fastembed", "candle", "api"]

# Enable all performance optimizations
performance = ["simd"]

[[example]]
name = "feature_demo"
required-features = []
