[package]
name = "cheungfun-integrations"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
description = "External service integrations for Cheungfun"
categories.workspace = true

[dependencies]
cheungfun-core = { path = "../cheungfun-core", features = ["storage"] }

# Core async and error handling
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# Vector stores (optional)
# qdrant-client moved to optional dependencies section

# Candle ML Framework (optional)
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }

# HuggingFace Integration (optional, for Candle)
hf-hub = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }

# FastEmbed (optional, default) - using latest version to fix ort compatibility
fastembed = { version = "4.0", optional = true }

# API embedders (optional)
siumai = { version = "0.4.0", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
sha2 = { version = "0.10", optional = true }

# High-performance SIMD vector operations
simsimd = { version = "6.4", optional = true }

# Parallel processing
rayon = { version = "1.8", optional = true }

# HNSW approximate nearest neighbor search
hnsw_rs = { version = "0.3", optional = true }

# Qdrant vector database client
qdrant-client = { workspace = true, optional = true }

# Database storage (optional)
sqlx = { version = "0.8", features = ["postgres", "sqlite", "runtime-tokio-rustls", "migrate", "uuid", "chrono", "json"], optional = true }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"], optional = true }

# Time handling
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
test-case = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
# Default feature: FastEmbed for best user experience
default = ["fastembed"]

# FastEmbed integration (recommended)
fastembed = ["dep:fastembed"]

# Candle integration (advanced users)
candle = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:hf-hub",
    "dep:tokenizers"
]

# GPU acceleration features
gpu-cuda = ["candle", "candle-core/cuda"]
gpu-metal = ["candle", "candle-core/metal"]
gpu = ["gpu-cuda"]  # Default to CUDA for broader compatibility

# API embedders integration (cloud services)
api = [
    "dep:siumai",
    "dep:reqwest",
    "dep:sha2"
]

# High-performance SIMD vector operations
simd = ["dep:simsimd", "dep:rayon"]

# HNSW approximate nearest neighbor search
hnsw = ["dep:hnsw_rs"]

# Qdrant vector database integration
qdrant = ["dep:qdrant-client"]

# Database storage integration
storage = ["dep:sqlx", "dep:redis"]

# Enable all embedding backends
all-embedders = ["fastembed", "candle", "api"]

# Enable all vector stores
all-stores = ["qdrant", "hnsw"]

# Enable all storage backends
all-storage = ["storage", "qdrant"]

# Memory-optimized vector store (always recommended)
optimized-memory = []

# Enable all performance optimizations
performance = ["simd", "hnsw", "optimized-memory"]

# GPU performance (separate from core performance)
gpu-performance = ["gpu", "performance"]

# Examples demonstrating integrations functionality
[[example]]
name = "vector_store_performance_test"
path = "examples/vector_store_performance.rs"

[[example]]
name = "api_embedder_example"
path = "examples/api_embedder_example.rs"
required-features = ["api"]

[[example]]
name = "feature_demo"
path = "examples/feature_demo.rs"

[[example]]
name = "simple_test"
path = "examples/simple_test.rs"
