[package]
name = "cheungfun-multimodal"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
description = "Multimodal support for the Cheungfun RAG framework"
categories.workspace = true

[dependencies]
# Core dependencies
cheungfun-core = { path = "../cheungfun-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# Date/time
chrono = { workspace = true }

# Collections and utilities
indexmap = "2.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = { workspace = true }

# Image processing
image = { version = "0.25", optional = true }
imageproc = { version = "0.25", optional = true }

# Audio processing
rodio = { version = "0.19", optional = true }
hound = { version = "3.5", optional = true }
symphonia = { version = "0.5", optional = true }

# Video processing (through FFmpeg)
ffmpeg-next = { version = "7.0", optional = true }

# Machine learning
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }

# HTTP client for remote resources
reqwest = { workspace = true, features = ["stream"], optional = true }

# File format detection
infer = { version = "0.16", optional = true }

# Base64 encoding/decoding
base64 = "0.22"

# Path utilities
path-absolutize = "3.1"

# Cryptographic hashing
sha2 = "0.10"

# URL parsing
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
png = "0.17"

[features]
default = ["image-support", "format-detection"]

# Core features
image-support = ["dep:image", "dep:imageproc", "dep:infer"]
audio-support = ["dep:rodio", "dep:hound", "dep:symphonia", "dep:infer"]
video-support = ["dep:ffmpeg-next", "dep:infer"]
format-detection = ["dep:infer"]
remote-resources = ["dep:reqwest"]
3d-support = ["dep:infer"]

# ML features
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers"]
clip = ["candle", "image-support"]

# All features
full = [
    "image-support",
    "audio-support", 
    "video-support",
    "format-detection",
    "remote-resources",
    "candle",
    "clip"
]

[[example]]
name = "image_processing"
required-features = ["image-support"]

[[example]]
name = "audio_processing"
required-features = ["audio-support"]

[package.metadata.docs.rs]
features = ["full"]
