[package]
name = "cheungfun-query"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
description = "Query processing and retrieval for the Cheungfun RAG framework"
categories.workspace = true

[dependencies]
cheungfun-core = { path = "../cheungfun-core" }

# Core async and error handling
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# Streaming and futures
futures = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }

# LLM integration
siumai = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
test-case = { workspace = true }

[features]
default = []
