[package]
name = "cheungfun-query"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
description = "Query processing and retrieval for the Cheungfun RAG framework"
categories.workspace = true

# Examples demonstrating core query functionality
[[example]]
name = "query_pipeline_demo"
path = "examples/query_pipeline.rs"

[[example]]
name = "basic_query_demo"
path = "examples/basic_query.rs"

[dependencies]
cheungfun-core = { path = "../cheungfun-core" }
cheungfun-indexing = { path = "../cheungfun-indexing" }

# Core async and error handling
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# Streaming and futures
futures = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }

# LLM integration
siumai = { workspace = true }

# Logging
tracing = { workspace = true }

# Random number generation
rand = { workspace = true }

# Date and time
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
test-case = { workspace = true }
chrono = { workspace = true }
tracing-subscriber = { workspace = true }
cheungfun-integrations = { path = "../cheungfun-integrations" }

[features]
# Default features - basic functionality without external dependencies
default = []

