[package]
name = "cheungfun"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
description = "Fast, streaming indexing, query, and agentic LLM applications in Rust"
categories.workspace = true

[dependencies]
# Re-export all core modules
cheungfun-core = { path = "../cheungfun-core" }
cheungfun-indexing = { path = "../cheungfun-indexing" }
cheungfun-query = { path = "../cheungfun-query" }
cheungfun-agents = { path = "../cheungfun-agents" }
cheungfun-integrations = { path = "../cheungfun-integrations" }

[features]
# Default: Safe and stable features that work everywhere
default = ["optimized-memory"]

# Performance features (recommended for production)
simd = ["cheungfun-integrations/simd"]
optimized-memory = ["cheungfun-integrations/optimized-memory"]
hnsw = ["cheungfun-integrations/hnsw"]

# ML framework features
candle = ["cheungfun-integrations/candle"]
candle-cuda = ["cheungfun-integrations/gpu-cuda"]
candle-metal = ["cheungfun-integrations/gpu-metal"]

# Integration features
qdrant = ["cheungfun-integrations/qdrant"]
fastembed = ["cheungfun-integrations/fastembed"]

# Performance bundle (for users who want speed)
performance = ["simd", "optimized-memory", "hnsw"]

# Full feature set (for advanced users)
full = ["performance", "candle", "qdrant", "fastembed"]
